New Object Class + Function Updates
- Added 'Item' as an abstract (seperate from Interactables)
- Added working functionality for 'rest' and 'hide' (still needs testing)
- Bug fixes & type corrections